<resources>
    <string name="app_name">task403</string>
    <string name="_0_0">0.0</string>
    <string name="max">MAX</string>
    <string name="aceleracion_actual">ACELERACION ACTUAL</string>
    <string name="max">MAX</string>
    <string name="_0_0">0.0</string>
    <string name="max">MAX</string>
    <string name="aceleracion_maxima">ACELERACION MAXIMA</string>
    <string name="_0_0">0.0</string>
    <string name="eje">EJE</string>
    <string name="_0_0">0.0</string>
    <string name="_0_0">0.0</string>
    <string name="eje">EJE</string>
    <string name="eje">EJE</string>
    <string name="_0_0">0.0</string>
</resources>
